--- a/Services/PetStore.Services.Data/PetStore.Services.Data.csproj
+++ b/Services/PetStore.Services.Data/PetStore.Services.Data.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="..\..\Data\PetStore.Data.Common\PetStore.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\PetStore.Data.Models\PetStore.Data.Models.csproj" />
     <ProjectReference Include="..\PetStore.Services.Mapping\PetStore.Services.Mapping.csproj" />
+    <ProjectReference Include="..\PetStore.Services\PetStore.Services.csproj" />
   </ItemGroup>
 
 </Project>
