--- a/Services/PetStore.Services/PetStore.Services.csproj
+++ b/Services/PetStore.Services/PetStore.Services.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Data\PetStore.Data.Models\PetStore.Data.Models.csproj" />
+  </ItemGroup>
+
 </Project>
